# MusicTheory

./: CMakeLists.txt
CMakeProject1/: CMakeLists.txt  CMakeProject1.cpp  CMakeProject1.h  Tuning.cpp  Tuning.h
MusicTheory/: CMakeLists.txt  Scala.cpp  Tuning.cpp  Tuning.h
MusicTheoryTest/: CMakeLists.txt  MusicTheoryTest.cpp
